# beefyWallet

./: README.md  Team Agreement.md  axios.js  cooode.js  data.js  package-lock.json  package.json  requirements.md
assets/: Logo.png:Zone.Identifier  LogowithBg.png:Zone.Identifier
back-end/: cmnds.txt  db.sqlite3  pyproject.toml
back-end/beefy_wallet_api/api/: serializer.py  views.py
back-end/core/: settings.py  urls.py
beefywallet/: package-lock.json  package.json  useStyle.js
beefywallet/pages/: Advice.js  Discount.js  Reports.js  SignUp.js  Welcome.js  _app.js  _document.js  currency-converter.js  discounts.js  help.js  index.js  login.js  welcome.js
beefywallet/pages/app/: Advice.js  Calender.js  Dashboard.js  Discount.js  DiscountPage.js  Login.js  MoneySource.js  Reports.js  SignUp.js  about_us.js  index.js  login.js  signup.js
beefywallet/src/components/: AddMoneySourceForm.js  AddSources.js  AddTransactionForm.js  Chart.js  ConvertToPdf.js  Deposits.js  MoneySourceChart.js  MoneySources.js  Notification.js  Orders.js  PageHeader.js  ReportDashboard.js  Reports.js  ReportsComponent.js  SideBar.js  TopBar.js  Total.js  listItems.js  useStyle.js
beefywallet/src/context/: BeefyWalletAdmin.js  Dashboard.js  (+7 more)
pages/: _app.js  about-us.js  currency-converter.js  help.js  index.js  quotes.js  reports.js
pages/app/: login.js  signup.js
src/components/: AddMoneySourceForm.js  AddTransactionForm.js  Chart.js  MoneySourceChart.js  MoneySources.js  NotificationMenuAds.js  Reports.js  TopBar.js  Total.js
src/context/: BeefyWalletTemplete.js  apiData.js
(+1 files in other folders)
